--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sarahmacneill.github.io/react-mooc/",
+  "homepage": "http://sarahmacneill.github.io/react-mooc",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
